bridge/base/webapp-service.yaml
#! webapp-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: webapp-published
    namespace: projet-marmiton
    labels:
        com.docker.compose.project: projet_marmiton
        com.docker.compose.service: webapp
spec:
    selector:
        com.docker.compose.project: projet_marmiton
        com.docker.compose.service: webapp
    ports:
        - name: webapp-8501
          port: 8501
          protocol: TCP
          targetPort: webapp-8501
